[package]
authors = ["shivam <shivam.cse17@nituk.ac.in>"]
edition = "2018"
name = "http11"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.0.1"}
tokio = {version = "1", features = ["net", "rt", "macros"]}
