[package]
authors = ["shivam <shivam.cse17@nituk.ac.in>"]
edition = "2018"
name = "http11"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.0.1"}
futures = {version = "0.3.15"}
lazy_static = {version = "1.4.0"}
paste = "1.0.5"
regex = {version = "1.4.6"}
tokio = {version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "time"]}
